Add initial Irene roleplay content JSON file with title, text, icon, and ID

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -17,6 +17,7 @@
   "Language": "Language",
   "Explore": "Explore",
   "Learn more": "Learn more",
+  "LearnMore": "Learn more",
   "Get started": "Get started",
   "Submit": "Submit",
   "Message": "Message",
@@ -32,6 +33,8 @@
   "Talk to Irene": "Talk to Irene",
   "Read More": "Read More",
   "Hire Irene": "Pricing Plans",
+  "IreneRoleplayBlockTitle": "Roleplay that actually fits your life",
+  "IreneRoleplayBlockText": "Beyond a neutral coach, Irene can shift into Mother, Boss, or Partner personas. Each mode tweaks tone, accountability, and energy, so you get soft encouragement, decisive momentum, or heart-first support without leaving the same workspace.",
   "IreneIntroTitle": "Ik ben Irene 🌱",
   "IreneIntroText": "I'm your ADHD-friendly digital coach. I turn scattered to-do lists into structured rituals, keep score of your momentum, and check in with warmth instead of pressure.",
   "IreneMiddleTitle": "Structure that feels personal",
@@ -45,31 +48,39 @@
   "IreneChessContent": "When you're stuck, I surface the next best activity the way a chess engine highlights moves—clear options without judgement.",
   "HireIreneTitle": "Hire Irene",
   "HireIreneSubtitle": "First two weeks of every plan are free. Cancel anytime.",
+  "HireIreneHighlight": "two weeks",
   "IreneContactTitle": "Need something different?",
   "IreneContactContent": "If your use case isn't listed or you need a bespoke integration, send a message and we'll tailor Irene to your workflow.",
   "IrenePlans": {
     "StarterName": "Starter Plan",
-    "StarterShift": "8 AM – 4 PM",
     "StarterPrice": "€24 per month",
-    "StarterBulletOne": "10 min call every day.",
-    "StarterBulletTwo": "200 WhatsApp replies included.",
-    "StarterBulletThree": "Roleplay mode: Boss, Mother, Partner.",
-    "StarterBulletFour": "Adaptive scheduling that flexes with your day.",
+    "StarterRoleplayTitle": "2 roleplay modes",
+    "StarterRoleplayDescription": "Stay in neutral ADHD-coach mode or switch to Mother Mode for warmth, reassurance, and steady encouragement.",
+    "StarterCallCredit": "10 minutes daily call credit",
+    "StarterReplies": "200 replies from your coach",
+    "StarterAdaptiveTitle": "Adaptive scheduling",
+    "StarterAdaptiveDescription": "Your plan moves with you: early starts, late nights, or schedule changes—your coach adapts in real time and keeps you in flow.",
     "AdvancedBadge": "Best Deal",
     "AdvancedName": "Advanced Plan",
-    "AdvancedShift": "8 AM – 10 PM",
     "AdvancedPrice": "€54 per month",
-    "AdvancedBulletOne": "Everything in Starter, plus:",
-    "AdvancedBulletTwo": "1 hour daily call.",
-    "AdvancedBulletThree": "Unlimited replies.",
-    "AdvancedBulletFour": "Live activity feed.",
+    "AdvancedRoleplayTitle": "3 roleplay modes",
+    "AdvancedRoleplayDescription": "Neutral, Mother, or Boss Mode: soften the tone, lean on empathy, or ask for decisive direction whenever you need it.",
+    "AdvancedCall": "1 hour daily call credit",
+    "AdvancedReplies": "Unlimited replies",
+    "AdvancedAdaptiveTitle": "Adaptive scheduling",
+    "AdvancedAutopilotTitle": "Autopilot mode",
+    "AdvancedAutopilotDescription": "Coach Irene learns from your behavior and suggests daily activities that match your energy, capacity, and focus.",
     "EliteName": "Elite Plan",
-    "EliteShift": "24/7 on-demand",
     "ElitePrice": "€99 per month",
-    "EliteBulletOne": "Everything in Advanced, plus:",
-    "EliteBulletTwo": "Unlimited calls.",
-    "EliteBulletThree": "Behavioral change interventions.",
-    "Button": "Request via WhatsApp",
+    "EliteRoleplayTitle": "4 roleplay modes",
+    "EliteRoleplayDescription": "Neutral ADHD coach energy, Mother warmth, Boss precision, or Partner connection—your coach adapts instantly to match your bandwidth.",
+    "EliteCalls": "Unlimited daily call credit",
+    "EliteReplies": "Unlimited replies",
+    "EliteAdaptiveTitle": "Adaptive scheduling",
+    "EliteAutopilotTitle": "Autopilot mode",
+    "EliteInterventionTitle": "Intervention mode",
+    "EliteInterventionDescription": "Giving you full autonomy, Coach Irene uses science-based behavior-change tools to help you build better habits and release the ones that no longer serve you.",
+    "Button": "Claim Free Trial",
     "MessageTemplate": "Hello, I want the {{plan}} subscription plan."
   },
   "legal": {
