--- a/src/locales/nl/translation.json
+++ b/src/locales/nl/translation.json
@@ -17,6 +17,7 @@
   "Language": "Taal",
   "Explore": "Ontdekken",
   "Learn more": "Meer informatie",
+  "LearnMore": "Meer info",
   "Get started": "Aan de slag",
   "Submit": "Versturen",
   "Message": "Bericht",
@@ -32,6 +33,8 @@
   "Talk to Irene": "Praat met Irene",
   "Read More": "Lees meer",
   "Hire Irene": "Prijsplannen",
+  "IreneRoleplayBlockTitle": "Roleplay dat echt bij je past",
+  "IreneRoleplayBlockText": "Naast een neutrale coach kan Irene overschakelen naar de rol van Moeder, Baas of Partner. Elke persona heeft een eigen toon en vorm van accountability, zodat je precies krijgt wat je nodig hebt: zachte steun, duidelijke richting of warme aanmoediging—zonder je workspace te verlaten.",
   "IreneIntroTitle": "Ik ben Irene 🌱",
   "IreneIntroText": "Ik ben je ADHD-vriendelijke digitale coach. Ik geef rommelige to-do's ritme, houd je voortgang bij en check in met warmte in plaats van druk.",
   "IreneMiddleTitle": "Structuur die persoonlijk voelt",
@@ -45,31 +48,39 @@
   "IreneChessContent": "Zit je vast? Ik stel de volgende beste actie voor zoals een schaakengine zetten toont—heldere opties zonder oordeel.",
   "HireIreneTitle": "Huur Irene in",
   "HireIreneSubtitle": "De eerste twee weken van elk plan zijn gratis. Opzeggen kan altijd.",
+  "HireIreneHighlight": "twee weken",
   "IreneContactTitle": "Staat jouw scenario er niet bij?",
   "IreneContactContent": "Laat weten welke workflow of integratie je zoekt en we stemmen Irene af op jouw context.",
   "IrenePlans": {
     "StarterName": "Starter-plan",
-    "StarterShift": "8 AM – 4 PM",
     "StarterPrice": "€24 per maand",
-    "StarterBulletOne": "Dagelijks een call van 10 minuten.",
-    "StarterBulletTwo": "200 WhatsApp-antwoorden inbegrepen.",
-    "StarterBulletThree": "Roleplay-modus: baas, moeder, partner.",
-    "StarterBulletFour": "Adaptieve planning die meebeweegt.",
+    "StarterRoleplayTitle": "2 roleplay-modi",
+    "StarterRoleplayDescription": "Kies tussen neutrale ADHD-coaching of moederlijke ondersteuning: warm, steady en zonder oordeel.",
+    "StarterCallCredit": "10 minuten beltegoed per dag",
+    "StarterReplies": "200 replies van je coach",
+    "StarterAdaptiveTitle": "Adaptieve planning",
+    "StarterAdaptiveDescription": "Je plan beweegt met je mee: vroege starts, late avonden of plotselinge wijzigingen—je coach past realtime aan en houdt je in flow.",
     "AdvancedBadge": "Beste deal",
     "AdvancedName": "Advanced-plan",
-    "AdvancedShift": "8 AM – 10 PM",
     "AdvancedPrice": "€54 per maand",
-    "AdvancedBulletOne": "Alles uit Starter, plus:",
-    "AdvancedBulletTwo": "Dagelijks 1 uur bellen.",
-    "AdvancedBulletThree": "Onbeperkte replies.",
-    "AdvancedBulletFour": "Live activity feed.",
+    "AdvancedRoleplayTitle": "3 roleplay-modi",
+    "AdvancedRoleplayDescription": "Neutraal, moeder of baas: kies empathie, duidelijkheid of discipline precies wanneer jij het nodig hebt.",
+    "AdvancedCall": "1 uur beltegoed per dag",
+    "AdvancedReplies": "Onbeperkte replies",
+    "AdvancedAdaptiveTitle": "Adaptieve planning",
+    "AdvancedAutopilotTitle": "Autopilot-modus",
+    "AdvancedAutopilotDescription": "Coach Irene leert van jouw gedrag en stelt dagelijkse activiteiten voor die passen bij je energie en focus.",
     "EliteName": "Elite-plan",
-    "EliteShift": "24/7 on-demand",
     "ElitePrice": "€99 per maand",
-    "EliteBulletOne": "Alles uit Advanced, plus:",
-    "EliteBulletTwo": "Onbeperkte calls.",
-    "EliteBulletThree": "Gedragsveranderende interventies.",
-    "Button": "Vraag aan via WhatsApp",
+    "EliteRoleplayTitle": "4 roleplay-modi",
+    "EliteRoleplayDescription": "Neutraal, moeder, baas of partner—je coach schakelt direct naar de energie die jij nodig hebt.",
+    "EliteCalls": "Onbeperkt beltegoed per dag",
+    "EliteReplies": "Onbeperkte replies",
+    "EliteAdaptiveTitle": "Adaptieve planning",
+    "EliteAutopilotTitle": "Autopilot-modus",
+    "EliteInterventionTitle": "Intervention-modus",
+    "EliteInterventionDescription": "Met volledige autonomie zet Coach Irene wetenschapsgedreven gedragsverandering in om betere gewoontes te bouwen en oude patronen los te laten.",
+    "Button": "Claim gratis proefperiode",
     "MessageTemplate": "Hallo, ik wil het {{plan}}-abonnement."
   },
   "legal": {
